deploy/base/mongodb-kubedb.yaml

apiVersion: v1
kind: Service
metadata:
  name: mongo-pods
  labels:
    app: strapi
    tier: backend
spec:
  ports:
  - name: db
    port: 27017
    protocol: TCP
    targetPort: db
  selector:
    app.kubernetes.io/instance: mongo
    app.kubernetes.io/managed-by: kubedb.com
    app.kubernetes.io/name: mongodbs.kubedb.com

---

apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: strapi
    tier: backend
  ownerReferences:
  - apiVersion: kubedb.com/v1alpha2
    kind: MongoDB
    name: mongo
spec:
  ports:
  - name: primary
    port: 27017
    protocol: TCP
    targetPort: db
  selector:
    app.kubernetes.io/instance: mongo
    app.kubernetes.io/managed-by: kubedb.com
    app.kubernetes.io/name: mongodbs.kubedb.com
    kubedb.com/role: primary
