deploy/base/strapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi-lb
spec:
  rules:
    - host: strapi.stage.ur.se
      http:
        paths:
          - backend:
              service:
                name: strapi
              service:
                port: 1337
